RESOLVED FIXED220552
[ Big Sur ] media/media-source/media-source-webm-init-inside-segment.html is failing
https://bugs.webkit.org/show_bug.cgi?id=220552
Summary [ Big Sur ] media/media-source/media-source-webm-init-inside-segment.html is ...
Truitt Savell
Reported 2021-01-12 10:52:44 PST
media/media-source/media-source-webm-init-inside-segment.html This test is failing constantly on Big Sur History: https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-source%2Fmedia-source-webm-init-inside-segment.html Diff: --- /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/media/media-source/media-source-webm-init-inside-segment-expected.txt +++ /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/media/media-source/media-source-webm-init-inside-segment-actual.txt @@ -5,15 +5,6 @@ RUN(source.duration = loader.duration()) RUN(sourceBuffer = source.addSourceBuffer(loader.type())) RUN(sourceBuffer.appendBuffer(loader.initSegment())) -EVENT(update) -Append a media segment. -RUN(sourceBuffer.appendBuffer(loader.mediaSegment(0))) -EVENT(update) -Append a new Initialization Segment. -RUN(sourceBuffer.appendBuffer(loader.initSegment())) -EVENT(update) -Append a media segment. -RUN(sourceBuffer.appendBuffer(loader.mediaSegment(1))) -EVENT(update) +EVENT(error) TEST(false) FAIL END OF TEST
Attachments
Patch (3.14 KB, patch)
2021-01-27 15:40 PST, Jean-Yves Avenard [:jya]
no flags
Patch (3.19 KB, patch)
2021-01-27 15:52 PST, Jean-Yves Avenard [:jya]
no flags
Add commit log into ChangeLog (I had it in the git commit before and it got lost when uploaded) (3.70 KB, patch)
2021-01-27 21:53 PST, Jean-Yves Avenard [:jya]
no flags
Patch for landing (3.67 KB, patch)
2021-01-28 18:09 PST, Jean-Yves Avenard [:jya]
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-12 10:54:37 PST
Truitt Savell
Comment 2 2021-01-12 10:56:48 PST
This test began showing in history after the changes in r271039
Truitt Savell
Comment 3 2021-01-12 13:16:18 PST
Jean-Yves Avenard [:jya]
Comment 4 2021-01-27 15:40:20 PST
Jean-Yves Avenard [:jya]
Comment 5 2021-01-27 15:52:19 PST
Jean-Yves Avenard [:jya]
Comment 6 2021-01-27 21:53:22 PST
Created attachment 418617 [details] Add commit log into ChangeLog (I had it in the git commit before and it got lost when uploaded)
EWS
Comment 7 2021-01-28 17:56:45 PST
Tools/Scripts/svn-apply failed to apply attachment 418617 [details] to trunk. Please resolve the conflicts and upload a new patch.
Jean-Yves Avenard [:jya]
Comment 8 2021-01-28 18:09:40 PST
Created attachment 418687 [details] Patch for landing
EWS
Comment 9 2021-01-28 18:54:42 PST
Committed r272043: <https://trac.webkit.org/changeset/272043> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418687 [details].
Amir Mark Jr
Comment 10 2021-02-04 14:31:22 PST
*** Bug 221426 has been marked as a duplicate of this bug. ***
Truitt Savell
Comment 12 2021-02-04 14:36:05 PST
Diff has changed: --- /Volumes/Data/slave/bigsur-release-tests-wk1/build/layout-test-results/media/media-source/media-source-webm-init-inside-segment-expected.txt +++ /Volumes/Data/slave/bigsur-release-tests-wk1/build/layout-test-results/media/media-source/media-source-webm-init-inside-segment-actual.txt @@ -4,16 +4,9 @@ EVENT(sourceopen) RUN(source.duration = loader.duration()) RUN(sourceBuffer = source.addSourceBuffer(loader.type())) +NotSupportedError: The operation is not supported. RUN(sourceBuffer.appendBuffer(loader.initSegment())) -EVENT(update) -Append a media segment. -RUN(sourceBuffer.appendBuffer(loader.mediaSegment(0))) -EVENT(update) -Append a new Initialization Segment. -RUN(sourceBuffer.appendBuffer(loader.initSegment())) -EVENT(update) -Append a media segment. -RUN(sourceBuffer.appendBuffer(loader.mediaSegment(1))) -EVENT(update) +TypeError: undefined is not an object (evaluating 'sourceBuffer.appendBuffer') +Caught exception: "TypeError: undefined is not an object (evaluating 'element.addEventListener')" FAIL END OF TEST
Ryan Haddad
Comment 13 2021-02-11 16:24:02 PST
(In reply to Truitt Savell from comment #11) > This change https://trac.webkit.org/changeset/272043/webkit > > did not fix the test. it is still failing. > > History: > https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia- > source%2Fmedia-source-webm-init-inside-segment.html It looks like the change fixed the test for WK2, but it continues to fail on WK1. Should we just be disabling all these webm tests on WK1 as won't fix, or are they expected to work?
Ryan Haddad
Comment 14 2021-02-12 15:35:51 PST
(In reply to Ryan Haddad from comment #13) > (In reply to Truitt Savell from comment #11) > > This change https://trac.webkit.org/changeset/272043/webkit > > > > did not fix the test. it is still failing. > > > > History: > > https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia- > > source%2Fmedia-source-webm-init-inside-segment.html > It looks like the change fixed the test for WK2, but it continues to fail on > WK1. > > Should we just be disabling all these webm tests on WK1 Skipped in r272818
Jean-Yves Avenard [:jya]
Comment 15 2024-11-25 19:25:22 PST
fully fixed in bug 282163
Note You need to log in before you can comment on or make changes to this bug.